// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`with comments with next page renders correctly 1`] = `
<FlatList
  ListFooterComponent={
    <Translate(LoadMore)
      onPress={[Function]}
    />
  }
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "paddingVertical": 15,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with comments with next page renders item correctly 1`] = `
<Connect(CommentItem)
  item={
    Object {
      "content": "hello roge",
      "person": Object {
        "id": "1",
      },
    }
  }
  onLongPress={[Function]}
  organization={
    Object {
      "id": "24234234",
    }
  }
/>
`;

exports[`with comments without next page renders correctly 1`] = `
<FlatList
  data={
    Array [
      Object {
        "content": "some comment",
      },
      Object {
        "content": "another comment",
      },
    ]
  }
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "paddingVertical": 15,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;

exports[`with no comments renders correctly 1`] = `
<FlatList
  disableVirtualization={false}
  horizontal={false}
  initialNumToRender={10}
  keyExtractor={[Function]}
  maxToRenderPerBatch={10}
  numColumns={1}
  onEndReachedThreshold={2}
  renderItem={[Function]}
  scrollEventThrottle={50}
  style={
    Object {
      "paddingVertical": 15,
    }
  }
  updateCellsBatchingPeriod={50}
  windowSize={21}
/>
`;
